# pubs-repo

./: .gitignore  Dockerfile.base  README.md  code_proxy.js  dockerfile  log.txt  requirements.txt
Proxy AI/helpers/: diko_forwarder.js  signature.js
Proxy AI/models/: function_markets_schemal.js  partner_schema.js  product_schema.js  topup_schema.js  transaction_schema.js
Proxy AI/routers/: proxy_router.js  proxy_router_v2.js  proxy_router_v2_dev.js  topup_router.js
Tele-service/: docker-compose.yml
Tele-service/src/api/: routes.py
Tele-service/src/database/: core.py  operations.py
Tele-service/src/services/: __init__.py  listener.py  supabase_sync.py  webhook_sender.py
Tele-service/src/telegram/: manager.py
Wa-service/: package-lock.json  package.json
Wa-service/src/: sessions.js
Whatsapp-services/: NOTE.MD  package-lock.json  package.json
Whatsapp-services/src/: sessions.js
Whatsapp-services/src/controllers/: clientController.js
ai agent services/: index.js  package.json
ai agent services/routers/: function_router.js  partner_router.js  proxy_router_v2.js  proxy_router_v2_dev.js
final-crm-be/: main.py
final-crm-be/app/: __init__.py
final-crm-be/app/agents/: __init__.py  agent_registry.py  analysis_agent.py  (+7 more)
final-telegram-service/: Dockerfile  pyproject.toml
final-telegram-service/src/api/: __init__.py  routes.py
final-telegram-service/src/database/: __init__.py
final-telegram-service/src/middleware/: auth.py
final-telegram-service/src/telegram/: __init__.py  manager.py
tele-services/: main.py
wa-services/src/: sessions.js
(+91 files in other folders)
